# c_oop

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
include/: Student.h  User.h  Worker.h
src/: Student.c  User.c  Worker.c  main.c
